--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,2 +1,3 @@
-tmdb_5000_credits.csv
-tmdb_5000_movies.csv
+tmdb_5000_credits.csv "https://github.com/CTopham/TophamRepo/blob/master/Movie%20Project/Resources/tmdb_5000_credits.csv"
+tmdb_5000_movies.csv  "https://github.com/CTopham/TophamRepo/blob/master/Movie%20Project/Resources/tmdb_5000_movies.csv"
+
